# auth_service

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/core/: logging_config.py  security.py  settings.py
app/crud/: __init__.py  user_crud.py
app/models/: __init__.py  base.py  service_models.py  user_models.py  user_role_models.py
app/schemas/: __init__.py  user_schemas.py
app/services/: __init__.py  user_services.py
